--- a/MyAdvancedRecorder/MyAdvancedRecorder/Base.lproj/Main.storyboard
+++ b/MyAdvancedRecorder/MyAdvancedRecorder/Base.lproj/Main.storyboard
@@ -28,6 +28,7 @@
                                 <rect key="frame" x="20" y="83" width="984" height="1033"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="separatorColor" red="0.019641721047078644" green="0.66151751893939392" blue="0.026504034485919859" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="sectionIndexColor" red="0.77999997138977051" green="0.43997466062382601" blue="0.56249180576876912" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="sectionIndexBackgroundColor" red="1" green="0.71480019130000005" blue="0.12569132829999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="sectionIndexTrackingBackgroundColor" red="0.26380360310000001" green="0.56889525159999998" blue="0.84266493060000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
@@ -83,13 +84,13 @@
                                 </connections>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="volume" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ojl-a9-qPr">
-                                <rect key="frame" x="644" y="1211" width="324" height="34"/>
+                                <rect key="frame" x="605" y="1211" width="270" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="HaB-Od-8MT">
-                                <rect key="frame" x="696" y="1279" width="220" height="2"/>
+                                <rect key="frame" x="630" y="1294" width="220" height="2"/>
                             </progressView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="FileName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="upM-nf-jFB">
                                 <rect key="frame" x="98" y="1124" width="637" height="33"/>
@@ -114,6 +115,7 @@
                             <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="GMb-4F-iyb">
                                 <rect key="frame" x="18" y="1165" width="988" height="31"/>
                                 <color key="minimumTrackTintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="maximumTrackTintColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="thumbTintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <action selector="sliderChanged:" destination="pJj-MM-2oj" eventType="valueChanged" id="nqL-Gk-4zU"/>
@@ -139,9 +141,19 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0:0:0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xiR-Hx-42A">
                                 <rect key="frame" x="774" y="1124" width="230" height="32"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tId-0S-TtO">
+                                <rect key="frame" x="897" y="1211" width="96" height="96"/>
+                                <state key="normal" image="setting"/>
+                                <connections>
+                                    <action selector="setting:" destination="pJj-MM-2oj" eventType="touchUpInside" id="r68-S2-GNc"/>
+                                    <segue destination="fhy-U3-tWK" kind="popoverPresentation" identifier="showSetting" popoverAnchorView="tId-0S-TtO" id="wwm-fX-tMu">
+                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                    </segue>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -164,14 +176,55 @@
             </objects>
             <point key="canvasLocation" x="1247" y="61"/>
         </scene>
+        <!--Setting View Controller-->
+        <scene sceneID="etu-uu-krI">
+            <objects>
+                <viewController modalPresentationStyle="pageSheet" id="fhy-U3-tWK" customClass="SettingViewController" customModule="MyAdvancedRecorder" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="K5v-cc-j0G"/>
+                        <viewControllerLayoutGuide type="bottom" id="bB4-N0-hHq"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="HDT-Hu-yoC">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="BitRate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lUA-rR-AMQ">
+                                <rect key="frame" x="17" y="20" width="87" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="obL-Gy-0yV">
+                                <rect key="frame" x="17" y="59" width="287" height="29"/>
+                                <segments>
+                                    <segment title="128K"/>
+                                    <segment title="160K"/>
+                                    <segment title="192K"/>
+                                    <segment title="320K"/>
+                                </segments>
+                            </segmentedControl>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <value key="contentSizeForViewInPopover" type="size" width="320" height="200"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="320" height="568"/>
+                    <connections>
+                        <outlet property="bitRateSegment" destination="obL-Gy-0yV" id="7l0-iC-9RH"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ClT-7L-s0J" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1990" y="512"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="tsB-Ww-3RL">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WZs-Ad-skr" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" systemItem="favorites" id="pNe-8d-Qha"/>
                     <toolbarItems/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" prompted="NO"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="rjT-7k-0bF">
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="rjT-7k-0bF">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -191,6 +244,7 @@
         <image name="next" width="96" height="96"/>
         <image name="playRecord" width="96" height="96"/>
         <image name="previous" width="96" height="96"/>
+        <image name="setting" width="96" height="96"/>
         <image name="startRecord" width="96" height="96"/>
     </resources>
 </document>
